Updated the website

--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LIAM</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech+Mono">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/pw/ACtC-3dpCK8JpD8g7uRZUvbqqjO9ziFI7w7c3P-8KBSmP5FM9JmbFhXk7l4qQFQmXdTK9c5da6YUvg6swk3_wU7dKXXslRHyJf82-gXGUAEnnPkVXZqkkDXF5mCehYdbXEganIduwnvg5-xsDKTe7BXFOlEJ=s16-no" />
 </head>
 <body>
     <div id="wrapper">
+        <div id="prehead">
 
+            <div id="streaks">
+                <h4>// REDACTED //</h4>
+            </div>
+        </div>
         <header>
-            <H1>Liam</H1>
+            <H1>Liam Andrzejewski</H1>
+            <h3>WELCOME &lt;USER&gt</h3>
             <div class="bordered" id="skills">
                 Python, Lua, Batch, HTML, Discordpy, Django
             </div>
@@ -20,7 +27,7 @@
             <br>
             <hr class="divider">
             <div id="content">
-                <h4>>>> import Projects from liam.Github</h4>
+                <h4>C:\Users\Liam\Projects> dir</h4>
 
                 <div id="projects">
                     <div class="project">
