--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <p>Discord.py Bot with moderation and management capabilities.</p>
                         <hr class="divider-short">
                         <p>Python, Discord.py</p>
-                        <a href="https://github.com/Liam31/Chad-Bot" class="no-underline" target="_blank">
-                            <button>Private Repo</button>
+                        <a href="https://github.com/Liam31/Chad-Bot-Public" class="no-underline" target="_blank">
+                            <button>View Project</button>
                         </a>
                     </div>
                     <div class="project">
