--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <H1>Liam Andrzejewski</H1>
             <h3>WELCOME &lt;USER&gt</h3>
             <div class="bordered" id="skills">
-                Python, Lua, Batch, HTML, Discordpy, Django
+                Python, Lua, JavaScript, Batch, HTML, Discordpy, Django
             </div>
             
             <br>
