--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="projects">
                     <div class="project">
                         <h4>Chad Bot</h4>
-                        <p>Discord.py Bot with moderation and management capabilities.</p>
+                        <p>Private Discord.py Bot with moderation and management capabilities.</p>
                         <hr class="divider-short">
                         <p>Python, Discord.py</p>
                         <a href="https://github.com/Liam31/Chad-Bot-Public" class="no-underline" target="_blank">
