--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p>A template project for me to actively learn how to use Django.</p>
                         <hr class="divider-short">
                         <p>Python, Django</p>
-                        <a href="https://gitlab.com/Liam31/DjangoProject" class="no-underline" target="_blank">
+                        <a href="https://github.com/Liam31/DjangoProject" class="no-underline" target="_blank">
                             <button>View Project</button>
                         </a>
                     </div>
