--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="projects">
                     <div class="project">
                         <h4>Chad Bot</h4>
-                        <p>Private Discord.py Bot with moderation and management capabilities.</p>
+                        <p>Private Discord.py Bot with moderation and economy capabilities.</p>
                         <hr class="divider-short">
                         <p>Python, Discord.py</p>
                         <a href="https://liam31.github.io/chadbot" class="no-underline" target="_blank">
@@ -49,8 +49,8 @@
                         </a>
                     </div>
                     <div class="project">
-                        <h4>Django Project</h4>
-                        <p>A template project for me to actively learn how to use Django.</p>
+                        <h4>Django Polls</h4>
+                        <p>Raw Django poll system.</p>
                         <hr class="divider-short">
                         <p>Python, Django</p>
                         <a href="https://github.com/Liam31/DjangoProject" class="no-underline" target="_blank">
