--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LIAM</title>
+    <title>Liam Andrzejewski</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech+Mono">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/pw/ACtC-3dpCK8JpD8g7uRZUvbqqjO9ziFI7w7c3P-8KBSmP5FM9JmbFhXk7l4qQFQmXdTK9c5da6YUvg6swk3_wU7dKXXslRHyJf82-gXGUAEnnPkVXZqkkDXF5mCehYdbXEganIduwnvg5-xsDKTe7BXFOlEJ=s16-no" />
@@ -14,14 +14,13 @@
         <div id="prehead">
 
             <div id="streaks">
-                <h4>// REDACTED //</h4>
             </div>
         </div>
         <header>
-            <H1>Liam Andrzejewski</H1>
-            <h3>WELCOME &lt;USER&gt</h3>
+            <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="100%" height="0px" viewBox="0 0 750 10"> <style type="text/css"><![CDATA[ text{filter: url(#filter); fill: white; font-family: 'Major Mono Display', sans-serif; font-size: 70px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}]]> </style> <defs> <filter id="filter"> <feFlood flood-color="black" result="black"/> <feFlood flood-color="red" result="flood1"/> <feFlood flood-color="limegreen" result="flood2"/> <feOffset in="SourceGraphic" dx="3" dy="0" result="off1a"/> <feOffset in="SourceGraphic" dx="2" dy="0" result="off1b"/> <feOffset in="SourceGraphic" dx="-3" dy="0" result="off2a"/> <feOffset in="SourceGraphic" dx="-2" dy="0" result="off2b"/> <feComposite in="flood1" in2="off1a" operator="in" result="comp1"/> <feComposite in="flood2" in2="off2a" operator="in" result="comp2"/> <feMerge x="0" width="100%" result="merge1"> <feMergeNode in="black"/> <feMergeNode in="comp1"/> <feMergeNode in="off1b"/> <animate attributeName="y" id="y" dur="4s" values='104px; 104px; 30px; 105px; 30px; 2px; 2px; 50px; 40px; 105px; 105px; 20px; 6ßpx; 40px; 104px; 40px; 70px; 10px; 30px; 104px; 102px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='10px; 0px; 10px; 30px; 50px; 0px; 10px; 0px; 0px; 0px; 10px; 50px; 40px; 0px; 0px; 0px; 40px; 30px; 10px; 0px; 50px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> </feMerge> <feMerge x="0" width="100%" y="60px" height="65px" result="merge2"> <feMergeNode in="black"/> <feMergeNode in="comp2"/> <feMergeNode in="off2b"/> <animate attributeName="y" id="y" dur="4s" values='103px; 104px; 69px; 53px; 42px; 104px; 78px; 89px; 96px; 100px; 67px; 50px; 96px; 66px; 88px; 42px; 13px; 100px; 100px; 104px;' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 0.548; 0.577; 0.613; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='0px; 0px; 0px; 16px; 16px; 12px; 12px; 0px; 0px; 5px; 10px; 22px; 33px; 11px; 0px; 0px; 10px' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 1' repeatCount="indefinite"/> </feMerge> <feMerge> <feMergeNode in="SourceGraphic"/> <feMergeNode in="merge1"/> <feMergeNode in="merge2"/> </feMerge> </filter> </defs> <g> <text x="0" y="30">RetroPronghorn</text> </g> </svg>
+            <h3>Welcome</h3>
             <div class="bordered" id="skills">
-                Python, Lua, JavaScript, Batch, HTML, Discordpy, Django
+                Python, Discordpy, MongoDB, Java (Loosely Javascript, HTML, CSS) 
             </div>
             
             <br>
@@ -31,26 +30,35 @@
 
                 <div id="projects">
                     <div class="project">
-                        <h4>Chad Bot</h4>
-                        <p>Private Discord.py Bot with moderation and economy capabilities.</p>
+                        <h4>Feather (Beta)</h4>
+                        <p>A honest, and human weather app.</p>
                         <hr class="divider-short">
-                        <p>Python, Discord.py</p>
-                        <a href="https://liam31.github.io/chadbot" class="no-underline" target="_blank">
+                        <p>Python, Flask</p>
+                        <a href="https://github.com/Liam31/Feather" class="no-underline" target="_blank">
                             <button>View Project</button>
                         </a>
                     </div>
                     <div class="project">
-                        <h4>Instance Directories</h4>
-                        <p>A Roblox Studio Plugin built with Lua and used to help developers' workflows.</p>
+                        <h4>Waterloo Bot</h4>
+                        <p>A Discord Bot made for a small sever with friends.</p>
                         <hr class="divider-short">
-                        <p>Lua</p>
-                        <a href="https://github.com/Liam31/InstanceDirectories" class="no-underline" target="_blank">
+                        <p>Python, Discord.py </p>
+                        <a href="https://github.com/Liam31/Feather" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>Chad Bot</h4>
+                        <p>Discord Bot with economy and moderation. </p>
+                        <hr class="divider-short">
+                        <p>Python, Discord.py, MongoDB</p>
+                        <a href="https://liam31.github.io/private" class="no-underline" target="_blank">
                             <button>View Project</button>
                         </a>
                     </div>
                     <div class="project">
                         <h4>Django Polls</h4>
-                        <p>Raw Django poll system.</p>
+                        <p>Django polling website, made while following Django Docs.</p>
                         <hr class="divider-short">
                         <p>Python, Django</p>
                         <a href="https://github.com/Liam31/DjangoProject" class="no-underline" target="_blank">
@@ -58,17 +66,8 @@
                         </a>
                     </div>
                     <div class="project">
-                        <h4>Batch Scripts</h4>
-                        <p>A collection of custom Batch commands to use in the windows command line.</p>
-                        <hr class="divider-short">
-                        <p>Batch</p>
-                        <a href="https://github.com/Liam31/Batch-Scripts" class="no-underline" target="_blank">
-                            <button>View Project</button>
-                        </a>
-                    </div>
-                    <div class="project">
                         <h4>Browse More</h4>
-                        <p>Check out my GitHub for some other things.</p>
+                        <p>Check out my GitHub for some other projects.</p>
                         <hr class="divider-short">
                         <p id="loading">...</p>
                         <a href="https://github.com/Liam31" class="no-underline" target="_blank">
