--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <p>A Discord Bot made for a small sever with friends.</p>
                         <hr class="divider-short">
                         <p>Python, Discord.py </p>
-                        <a href="https://github.com/Liam31/Feather" class="no-underline" target="_blank">
+                        <a href="https://github.com/Liam31/Waterloo-Bot" class="no-underline" target="_blank">
                             <button>View Project</button>
                         </a>
                     </div>
