--- a/index.html
+++ b/index.html
@@ -17,7 +17,95 @@
             </div>
         </div>
         <header>
-            <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="100%" height="0px" viewBox="0 0 750 10"> <style type="text/css"><![CDATA[ text{filter: url(#filter); fill: white; font-family: 'Major Mono Display', sans-serif; font-size: 70px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}]]> </style> <defs> <filter id="filter"> <feFlood flood-color="black" result="black"/> <feFlood flood-color="red" result="flood1"/> <feFlood flood-color="limegreen" result="flood2"/> <feOffset in="SourceGraphic" dx="3" dy="0" result="off1a"/> <feOffset in="SourceGraphic" dx="2" dy="0" result="off1b"/> <feOffset in="SourceGraphic" dx="-3" dy="0" result="off2a"/> <feOffset in="SourceGraphic" dx="-2" dy="0" result="off2b"/> <feComposite in="flood1" in2="off1a" operator="in" result="comp1"/> <feComposite in="flood2" in2="off2a" operator="in" result="comp2"/> <feMerge x="0" width="100%" result="merge1"> <feMergeNode in="black"/> <feMergeNode in="comp1"/> <feMergeNode in="off1b"/> <animate attributeName="y" id="y" dur="4s" values='104px; 104px; 30px; 105px; 30px; 2px; 2px; 50px; 40px; 105px; 105px; 20px; 6ßpx; 40px; 104px; 40px; 70px; 10px; 30px; 104px; 102px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='10px; 0px; 10px; 30px; 50px; 0px; 10px; 0px; 0px; 0px; 10px; 50px; 40px; 0px; 0px; 0px; 40px; 30px; 10px; 0px; 50px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> </feMerge> <feMerge x="0" width="100%" y="60px" height="65px" result="merge2"> <feMergeNode in="black"/> <feMergeNode in="comp2"/> <feMergeNode in="off2b"/> <animate attributeName="y" id="y" dur="4s" values='103px; 104px; 69px; 53px; 42px; 104px; 78px; 89px; 96px; 100px; 67px; 50px; 96px; 66px; 88px; 42px; 13px; 100px; 100px; 104px;' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 0.548; 0.577; 0.613; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='0px; 0px; 0px; 16px; 16px; 12px; 12px; 0px; 0px; 5px; 10px; 22px; 33px; 11px; 0px; 0px; 10px' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 1' repeatCount="indefinite"/> </feMerge> <feMerge> <feMergeNode in="SourceGraphic"/> <feMergeNode in="merge1"/> <feMergeNode in="merge2"/> </feMerge> </filter> </defs> <g> <text x="0" y="30">RetroPronghorn</text> </g> </svg>
+            <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="100%" height="0px" viewBox="0 0 750 10"> <style type="text/css"><![CDATA[ text{filter: url(#filter); fill: white; font-family: 'Major Mono Display', sans-serif; font-size: 70px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}]]> </style> <defs> <filter id="filter"> <feFlood flood-color="black" result="black"/> <feFlood flood-color="red" result="flood1"/> <feFlood flood-color="limegreen" result="flood2"/> <feOffset in="SourceGraphic" dx="3" dy="0" result="off1a"/> <feOffset in="SourceGraphic" dx="2" dy="0" result="off1b"/> <feOffset in="SourceGraphic" dx="-3" dy="0" result="off2a"/> <feOffset in="SourceGraphic" dx="-2" dy="0" result="off2b"/> <feComposite in="flood1" in2="off1a" operator="in" result="comp1"/> <feComposite in="flood2" in2="off2a" operator="in" result="comp2"/> <feMerge x="0" width="100%" result="merge1"> <feMergeNode in="black"/> <feMergeNode in="comp1"/> <feMergeNode in="off1b"/> <animate attributeName="y" id="y" dur="4s" values='104px; 104px; 30px; 105px; 30px; 2px; 2px; 50px; 40px; 105px; 105px; 20px; 6ßpx; 40px; 104px; 40px; 70px; 10px; 30px; 104px; 102px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='10px; 0px; 10px; 30px; 50px; 0px; 10px; 0px; 0px; 0px; 10px; 50px; 40px; 0px; 0px; 0px; 40px; 30px; 10px; 0px; 50px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> </feMerge> <feMerge x="0" width="100%" y="60px" height="65px" result="merge2"> <feMergeNode in="black"/> <feMergeNode in="comp2"/> <feMergeNode in="off2b"/> <animate attributeName="y" id="y" dur="4s" values='103px; 104px; 69px; 53px; 42px; 104px; 78px; 89px; 96px; 100px; 67px; 50px; 96px; 66px; 88px; 42px; 13px; 100px; 100px; 104px;' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 0.548; 0.577; 0.613; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='0px; 0px; 0px; 16px; 16px; 12px; 12px; 0px; 0px; 5px; 10px; 22px; 33px; 11px; 0px; 0px; 10px' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 1' repeatCount="indefinite"/> </feMerge> <feMerge> <feMergeNode in="SourceGraphic"/> <feMergeNode in="merge1"/> <feMergeNode in="merge2"/> </feMerge> </filter> </defs> <g> <text x="0" y="30">RetroPronghorn</text> </g> </svg> <svg id="subtext_svg" version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="100%" height="20px" viewBox="0 0 750 50"> <style type="text/css"><![CDATA[ #subtext{filter: url(#filter); fill: white; font-family: 'Major Mono Display', sans-serif; font-size: 35px; float: left; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}]]> </style> <defs> <filter id="filter"> <feFlood flood-color="black" result="black"/> <feFlood flood-color="red" result="flood1"/> <feFlood flood-color="limegreen" result="flood2"/> <feOffset in="SourceGraphic" dx="3" dy="0" result="off1a"/> <feOffset in="SourceGraphic" dx="2" dy="0" result="off1b"/> <feOffset in="SourceGraphic" dx="-3" dy="0" result="off2a"/> <feOffset in="SourceGraphic" dx="-2" dy="0" result="off2b"/> <feComposite in="flood1" in2="off1a" operator="in" result="comp1"/> <feComposite in="flood2" in2="off2a" operator="in" result="comp2"/> <feMerge x="0" width="100%" result="merge1"> <feMergeNode in="black"/> <feMergeNode in="comp1"/> <feMergeNode in="off1b"/> <animate attributeName="y" id="y" dur="4s" values='104px; 104px; 30px; 105px; 30px; 2px; 2px; 50px; 40px; 105px; 105px; 20px; 6ßpx; 40px; 104px; 40px; 70px; 10px; 30px; 104px; 102px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='10px; 0px; 10px; 30px; 50px; 0px; 10px; 0px; 0px; 0px; 10px; 50px; 40px; 0px; 0px; 0px; 40px; 30px; 10px; 0px; 50px' keyTimes='0; 0.362; 0.368; 0.421; 0.440; 0.477; 0.518; 0.564; 0.593; 0.613; 0.644; 0.693; 0.721; 0.736; 0.772; 0.818; 0.844; 0.894; 0.925; 0.939; 1' repeatCount="indefinite"/> </feMerge> <feMerge x="0" width="100%" y="20px" height="25px" result="merge2"> <feMergeNode in="black"/> <feMergeNode in="comp2"/> <feMergeNode in="off2b"/> <animate attributeName="y" id="y" dur="4s" values='103px; 104px; 69px; 53px; 42px; 104px; 78px; 89px; 96px; 100px; 67px; 50px; 96px; 66px; 88px; 42px; 13px; 100px; 100px; 104px;' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 0.548; 0.577; 0.613; 1' repeatCount="indefinite"/> <animate attributeName="height" id="h" dur="4s" values='0px; 0px; 0px; 16px; 16px; 12px; 12px; 0px; 0px; 5px; 10px; 22px; 33px; 11px; 0px; 0px; 10px' keyTimes='0; 0.055; 0.100; 0.125; 0.159; 0.182; 0.202; 0.236; 0.268; 0.326; 0.357; 0.400; 0.408; 0.461; 0.493; 0.513; 1' repeatCount="indefinite"/> </feMerge> <feMerge> <feMergeNode in="SourceGraphic"/> <feMergeNode in="merge1"/> <feMergeNode in="merge2"/> </feMerge> </filter> </defs> <g> <text id="subtext" x="-120" y="30">Welcome &lt;user&gt; identification #2Df810</text> </g> </svg>
+            
+            <div class="bordered" id="skills">
+                HTML, CSS, JavaScript, NodeJS, VueJS, React, NestJS, TypeScript, Polymer, MongoDB, WebRTC, Java, Spigot/Paper, Solidity. (Loosely: Python, C# Go)
+            </div>
+            
+            <br>
+            <hr class="divider">
+            <div id="content">
+                <h4>$> ls /redacted/matt/projects/</h4>
+
+                <div id="projects">
+                    <div class="project">
+                        <h4>VoiceRTC</h4>
+                        <p>WebRTC powered high fidelity P2P voice chat.</p>
+                        <hr class="divider-short">
+                        <p>WebRTC, JavaScript</p>
+                        <a href="https://github.com/RetroPronghorn/VoiceRTC" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>GuiltySpark</h4>
+                        <p>GuiltySpark is an oracle that pushes asset prices to the blockchain.</p>
+                        <hr class="divider-short">
+                        <p>Solidity, JavaScript</p>
+                        <a href="https://github.com/RetroPronghorn/GuiltySpark" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>Retros Generator</h4>
+                        <p>A generator plugin for Minecraft, used to produce materials over time.</p>
+                        <hr class="divider-short">
+                        <p>Java, Spigot</p>
+                        <a href="https://gitlab.com/RetroPronghorn/retros-generators" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>R3KT Bot</h4>
+                        <p>Syncronize moderation across multiple platforms & channels.</p>
+                        <hr class="divider-short">
+                        <p>NodeJS, NestJS</p>
+                        <a href="https://github.com/R3KT-io" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>LootSafe</h4>
+                        <p>Tokenize digital gaming assets safely and securely on the blockchain.</p>
+                        <hr class="divider-short">
+                        <p>Ethereum, JavaScript</p>
+                        <a href="https://github.com/lootsafe" class="no-underline" target="_blank">
+                            <button>View Project</button>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <h4>Browse More</h4>
+                        <p>Check out my GitHub for more projects. Some bigger some smaller.</p>
+                        <hr class="divider-short">
+                        <p id="loading">...</p>
+                        <a href="https://github.com/RetroPronghorn" class="no-underline" target="_blank">
+                            <button>My Github</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <hr class="divider">
+            <div id="content">
+                <h3>do you have a project ready? $$Hire Me.</h3>
+                <p>Send me a message at the email below.</p>
+                <h2>
+                    <a href="mailto:RetroPronghorn@gmail.com">RetroPronghorn@gmail.com</a>
+                </h2>
+                <div class="bordered" id="skills">
+                    <i class="fab fa-discord"></i> RetroPronghorn#0001 - 
+                    <i class="fab fa-github"></i> RetroPronghorn
+                    <br>
+                    <i class="fab fa-gitlab"></i> RetroPronghorn -
+                    <i class="fab fa-npm"></i> ~mdwisniewski
+                </div>
+            </div>
+        </header>
+    </div>
+</body>
+
+</html>
+
             <h3>Welcome</h3>
             <div class="bordered" id="skills">
                 Python, Discordpy, Flask, Django, MongoDB, Java (Loosely Javascript, HTML, CSS) 
